==> peter-strom/lia_sensorenhet/Drivers/winc1500/host_drv/bsp/source/nm_bsp_stm32.c <==
/**
 *
 * \file
 *
 * \brief This module contains SAMD21 BSP APIs implementation.
 *
 * Copyright (c) 2016-2018 Microchip Technology Inc. and its subsidiaries.
 *
 * \asf_license_start
 *
 * \page License
 *
 * Subject to your compliance with these terms, you may use Microchip
 * software and any derivatives exclusively with Microchip products.
 * It is your responsibility to comply with third party license terms applicable
 * to your use of third party software (including open source software) that
 * may accompany Microchip software.
 *
 * THIS SOFTWARE IS SUPPLIED BY MICROCHIP "AS IS". NO WARRANTIES,
 * WHETHER EXPRESS, IMPLIED OR STATUTORY, APPLY TO THIS SOFTWARE,
 * INCLUDING ANY IMPLIED WARRANTIES OF NON-INFRINGEMENT, MERCHANTABILITY,
 * AND FITNESS FOR A PARTICULAR PURPOSE. IN NO EVENT WILL MICROCHIP BE
 * LIABLE FOR ANY INDIRECT, SPECIAL, PUNITIVE, INCIDENTAL OR CONSEQUENTIAL
 * LOSS, DAMAGE, COST OR EXPENSE OF ANY KIND WHATSOEVER RELATED TO THE
 * SOFTWARE, HOWEVER CAUSED, EVEN IF MICROCHIP HAS BEEN ADVISED OF THE
 * POSSIBILITY OR THE DAMAGES ARE FORESEEABLE.  TO THE FULLEST EXTENT
 * ALLOWED BY LAW, MICROCHIP'S TOTAL LIABILITY ON ALL CLAIMS IN ANY WAY
 * RELATED TO THIS SOFTWARE WILL NOT EXCEED THE AMOUNT OF FEES, IF ANY,
 * THAT YOU HAVE PAID DIRECTLY TO MICROCHIP FOR THIS SOFTWARE.
 *
 * \asf_license_stop
 *
 */

#include "bsp/include/nm_bsp.h"
#include "common/include/nm_common.h"

tpfNmBspIsr gpfIsr = NULL;

static void chip_isr(void)
{
	if (gpfIsr)
	{
		gpfIsr();
	}
}

/*
 *	@fn		init_chip_pins
 *	@brief	Initialize reset, chip enable and wake pin
 */
static void init_chip_pins(void)
{
	/* note: use cube mx init */
}

/*
 *	@fn		nm_bsp_init
 *	@brief	Initialize BSP
 *	@return	0 in case of success and -1 in case of failure
 */
sint8 nm_bsp_init(void)
{
	nm_bsp_reset();

	return M2M_SUCCESS;
}

/**
 *	@fn		nm_bsp_deinit
 *	@brief	De-iInitialize BSP
 *	@return	0 in case of success and -1 in case of failure
 */
sint8 nm_bsp_deinit(void)
{
	/* note: use cube mx init */
	return M2M_SUCCESS;
}

/**
 *	@fn		nm_bsp_reset
 *	@brief	Reset NMC1500 SoC by setting CHIP_EN and RESET_N signals low,
 *           CHIP_EN high then RESET_N high
 *  @details Power-up/down sequence
 * 			 http://ww1.microchip.com/downloads/en/devicedoc/atmel-42487-atwinc1500b-mu_datasheet.pdf
 */
void nm_bsp_reset(void)
{

	HAL_GPIO_WritePin(CONF_WINC_PORT_CHIP_ENABLE, CONF_WINC_PIN_CHIP_ENABLE, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(CONF_WINC_PORT_RESET, CONF_WINC_PIN_RESET, GPIO_PIN_RESET);
	HAL_Delay(5);
	HAL_GPIO_WritePin(CONF_WINC_PORT_CHIP_ENABLE, CONF_WINC_PIN_CHIP_ENABLE, GPIO_PIN_SET);
	HAL_Delay(10); // min 5 ms acording to datasheet
	HAL_GPIO_WritePin(CONF_WINC_PORT_RESET, CONF_WINC_PIN_RESET, GPIO_PIN_SET);
	M2M_INFO("startup sequence done\n");	
}

/*
 *	@fn		nm_bsp_sleep
 *	@brief	Sleep in units of mSec
 *	@param[IN]	u32TimeMsec
 *				Time in milliseconds
 */
void nm_bsp_sleep(uint32 u32TimeMsec)
{
	HAL_Delay(u32TimeMsec);
}

/*
 *	@fn		nm_bsp_register_isr
 *	@brief	Register interrupt service routine
 *	@param[IN]	pfIsr
 *				Pointer to ISR handler
 */
void nm_bsp_register_isr(tpfNmBspIsr pfIsr)
{
	/* note: want to use cube mx initiation */
	gpfIsr = pfIsr;
}

/*
 *	@fn		nm_bsp_interrupt_ctrl
 *	@brief	Enable/Disable interrupts
 *	@param[IN]	u8Enable
 *				'0' disable interrupts. '1' enable interrupts
 */
void nm_bsp_interrupt_ctrl(uint8 u8Enable)
{
	if (u8Enable == 1)
	{
		HAL_NVIC_EnableIRQ(CONF_WINC_EXTI_IRQN);
	}
	else
	{
		HAL_NVIC_DisableIRQ(CONF_WINC_EXTI_IRQN);
	}
}
